@startuml d3_flattened_fk
!include _style.puml
title D3 — flattened-fk  (the grandparent key copied down to the grandchild)

entity "charity" as c {
  * charity_id : BIGINT <<PK>>
  --
  * name : TEXT
  * country : TEXT
  * founded_on : DATE
}
entity "person" as p {
  * person_id : BIGINT <<PK>>
  --
  * charity_id : BIGINT <<FK>>
  * full_name : TEXT
  * email : TEXT
  * joined_at : TIMESTAMPTZ
}
entity "donation" as d {
  * donation_id : BIGINT <<PK>>
  --
  * person_id : BIGINT <<FK>>
  <back:#FFF3CD>* charity_id : BIGINT <<FK>> — denormalised</back>
  * amount_cents : BIGINT
  * currency : CHAR(3)
  * donated_at : TIMESTAMPTZ
  note : TEXT
}
c ||--o{ p
p ||--o{ d
c ||..o{ d : "redundant shortcut\n(derivable via person)"

note bottom of d
  **all D2 indexes, plus**
  **+ donation_charity_time_idx** (charity_id, donated_at DESC)
  **+ donation_charity_amount_idx** (charity_id) INCLUDE (amount_cents)

  charity_id on donation is pure redundancy — it is
  always equal to the donation's person's charity_id.
  Buying with that redundancy:
   * three of the current sixteen queries drop a join
     (q02, q08, q15 in sql/d3_flattened_fk/queries.sql)
   * q08 can be answered by an index-only scan on
     donation_charity_amount_idx. Zero heap fetches is a
     PREPARED-READ result, not a property of the index:
     in run 20260913T125342Z-v3 the covering plan visited
     1,756 / 31,293 entries with 0 fetches under explicit
     VACUUM, while its ANALYZE-only diagnostic still
     started at 31,293 fetches on trial 1.

  Paying with it:
   * a wider row and another index to maintain
   * an invariant the database does not enforce.
     Move a person between charities and every
     donation row is now lying.
end note
@enduml
